# Automatic-recognition-system-of-license-plate-number

./: CMakeLists.txt  README.md  ann_train.cpp  main.cpp  svm_train.cpp
Commons/include/: Python.h  pyconfig.h  pyerrors.h
Commons/include/opencv2/: opencv_modules.hpp
Commons/include/wx/: setup.h
Commons/include/wx/msw/: rcdefs.h
Python36/DLLs/: python_lib.cat  python_tools.cat
Python36/Scripts/: django-admin.py  f2py.py  markdown_py  markdown_py.bat
Python36/libs/: _tkinter.lib  python3.lib
Python36/tcl/: tcl86t.lib  tcl86tg.lib  tclConfig.sh  tclstub86.lib  tk86t.lib  tk86tg.lib  tkstub86.lib
Python36/tcl/tix8.4.3/: tix84.lib  tix84g.lib
XML/: SVM_2.xml  ann_xml.xml
data/: SVM.xml
include/: LP.h  MyApp.h  MyFrame.h
python/: Batchrename.py  carnumber_estimate.py  estimate.py  estimate1.py  estimate_chinese.py  estimate_image.py  train-license-province.py
python/logs/: events.out.tfevents.1526455249.SERVER2012  events.out.tfevents.1526456160.SERVER2012  events.out.tfevents.1526560044.SERVER2012  events.out.tfevents.1526560157.SERVER2012  events.out.tfevents.1526560181.SERVER2012  events.out.tfevents.1526560240.SERVER2012  events.out.tfevents.1526560290.SERVER2012  events.out.tfevents.1526696185.SERVER2012  events.out.tfevents.1526895419.SERVER2012  events.out.tfevents.1526895569.SERVER2012
python/train-saver/digits/: checkpoint  model.ckpt.index
python/train-saver/letters/: model.ckpt.index
python/train-saver/province/: checkpoint  model.ckpt.index
src/: LP.cpp  MyApp.cpp  MyFrame.cpp
